style: 💄 Added login page html and some styling to it
Added folders to the sass folder, chose a color palette and added
variables for it. Added styles for login page

--- a/app-frontend/src/styles/sass/main.scss
+++ b/app-frontend/src/styles/sass/main.scss
@@ -1,1 +1,9 @@
+@import "helpers/variables";
+
+@import "components/form";
+
 @import "base/base";
+@import "base/typography";
+
+
+@import "pages/login";
