--- a/app-frontend/src/styles/css/style.css
+++ b/app-frontend/src/styles/css/style.css
@@ -1,3 +1,44 @@
+/* Color variables */
+/* Font */
+.form {
+  width: 45%; }
+  .form__group:not(:last-child) {
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: space-between; }
+  .form__label {
+    font-size: 1.5rem;
+    font-weight: 700;
+    display: block;
+    width: 25%;
+    display: flex;
+    align-items: center;
+    transition: all .3s; }
+  .form__input {
+    font-size: 1.5rem;
+    font-family: inherit;
+    color: inherit;
+    padding: 1.5rem;
+    border-radius: 2px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    border-bottom: 3px solid transparent;
+    width: 90%;
+    display: block;
+    transition: all .3s; }
+    .form__input:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+      border-bottom: 3px solid #79adcc; }
+    .form__input:focus:invalid {
+      border-bottom: 3px solid #ffc09f; }
+    .form__input::-webkit-input-placeholder {
+      color: #999; }
+  .form__input:placeholder-shown + .form__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem); }
+
 /* Universal Reset */
 *,
 *::after,
@@ -11,3 +52,16 @@ html {
 
 body {
   box-sizing: border-box; }
+
+body {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777; }
+
+.section-login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh; }
