style: 💄 UI changes for login page
Styled login page and button and added link to register page

--- a/app-frontend/src/styles/sass/base/_typography.scss
+++ b/app-frontend/src/styles/sass/base/_typography.scss
@@ -4,3 +4,13 @@ body {
 	line-height: 1.7;
 	color: $color-grey-dark;
 }
+
+.heading-primary {
+	color: inherit;
+	text-transform: uppercase;
+	font-size: 3rem;
+}
+
+.paragraph {
+	font-size: $default-font-size;
+}
