--- a/app-frontend/src/styles/css/style.css
+++ b/app-frontend/src/styles/css/style.css
@@ -1,11 +1,25 @@
 /* Color variables */
 /* Font */
 .form {
-  width: 45%; }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 30%;
+  height: 53rem;
+  padding: 4rem;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 1.6rem;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(0.5rem);
+  -webkit-backdrop-filter: blur(0.5rem);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  position: relative; }
   .form__group:not(:last-child) {
     margin-bottom: 2rem;
     display: flex;
     justify-content: space-between; }
+  .form__group:last-child {
+    display: flex; }
   .form__label {
     font-size: 1.5rem;
     font-weight: 700;
@@ -19,11 +33,11 @@
     font-family: inherit;
     color: inherit;
     padding: 1.5rem;
-    border-radius: 2px;
+    border-radius: .5rem;
     background-color: rgba(255, 255, 255, 0.5);
     border: none;
     border-bottom: 3px solid transparent;
-    width: 90%;
+    width: 75%;
     display: block;
     transition: all .3s; }
     .form__input:focus {
@@ -38,6 +52,66 @@
     opacity: 0;
     visibility: hidden;
     transform: translateY(-4rem); }
+
+.btn, .btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: .5rem;
+  transition: all .2s;
+  position: relative;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer; }
+
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
+
+.btn:active, .btn:focus {
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: .5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn--blue {
+  background-color: #79adcc;
+  color: #fff; }
+  .btn--blue::after {
+    background-color: #79adcc; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #79adcc;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #79adcc;
+  padding: 3px;
+  transition: all .2s; }
+
+.btn-text:hover {
+  background-color: #79adcc;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
 
 /* Universal Reset */
 *,
@@ -59,9 +133,26 @@ body {
   line-height: 1.7;
   color: #777; }
 
+.heading-primary {
+  color: inherit;
+  text-transform: uppercase;
+  font-size: 3rem; }
+
+.paragraph {
+  font-size: 1.6rem; }
+
 .section-login {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh; }
+  height: 100vh;
+  background: linear-gradient(60deg, #ffc09f 0%, #79adcc 100%); }
+
+.heading-form {
+  align-self: center;
+  position: absolute;
+  top: 7rem; }
+
+.btn-form {
+  flex-grow: 1; }
