--- a/app-frontend/src/styles/sass/components/_form.scss
+++ b/app-frontend/src/styles/sass/components/_form.scss
@@ -1,10 +1,26 @@
 .form {
-    width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30%;
+    height: 53rem;
+    padding: 4rem;
+    background: rgba($color-white, 0.2);
+    border-radius: 1.6rem;
+    box-shadow: 0 4px 30px rgba($color-black, 0.1);
+    backdrop-filter: blur(.5rem);
+    -webkit-backdrop-filter: blur(.5rem);
+    border: 1px solid rgba($color-white, 0.3);
+    position: relative;
 
     &__group:not(:last-child) {
         margin-bottom: 2rem;
         display: flex;
         justify-content: space-between;
+    }
+
+    &__group:last-child {
+        display: flex;
     }
 
     &__label {
@@ -22,11 +38,11 @@
         font-family: inherit;
         color: inherit;
         padding: 1.5rem;
-        border-radius: 2px;
+        border-radius: .5rem;
         background-color: rgba($color-white, .5);
         border: none;
         border-bottom: 3px solid transparent;
-        width: 90%;
+        width: 75%;
         display: block;
         transition: all .3s;
 
