--- a/app-frontend/src/styles/sass/main.scss
+++ b/app-frontend/src/styles/sass/main.scss
@@ -1,6 +1,7 @@
 @import "helpers/variables";
 
 @import "components/form";
+@import "components/button";
 
 @import "base/base";
 @import "base/typography";
