--- a/app-frontend/src/styles/sass/components/_form.scss
+++ b/app-frontend/src/styles/sass/components/_form.scss
@@ -5,6 +5,7 @@
     width: 30%;
     height: 53rem;
     padding: 4rem;
+    padding-top: 10rem;
     background: rgba($color-white, 0.2);
     border-radius: 1.6rem;
     box-shadow: 0 4px 30px rgba($color-black, 0.1);
